<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".savings_account"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/background_dark"/>
    <TextView
        android:id="@+id/savings_balance"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="0"
        tools:textAppearance="@style/savings_balance_style"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_withdrawal_coming_on"
            android:textColor="@android:color/background_dark"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/next_withdrawal_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/savings_withdrawal_time_style"
            android:textStyle="bold"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/make_a_deposit"
        android:background="@drawable/make_a_deposit_button_background"
        android:textAppearance="@style/make_a_deposit_style"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/withdraw_funds"
        android:textAppearance="@style/savings_withdraw_button_style"
        android:background="@drawable/savings_withdrawal_button_background" />
</LinearLayout>