<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/quote-slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true"
                android:layout_margin="10dp"
                android:background="@drawable/quoteslide"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/balance_"
                    android:layout_width="63dp"
                    android:layout_height="19dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="22dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/balance"
                    android:textAppearance="@style/balance1"
                    android:gravity="top"
                    android:layout_marginStart="22dp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/total_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="94dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/dummy_value"
                    android:textAppearance="@style/total_balance_style"
                    android:gravity="top"
                    android:layout_marginStart="94dp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_margin="10dp"
                android:background="@drawable/budgetlayout"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openBudgetAccount">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginStart="28dp"
                    android:layout_alignParentStart="true"
                    android:text="@string/budget"
                    android:textAppearance="@style/budget_"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/budget_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/dummy_value"
                    android:textAppearance="@style/budget_value"
                    android:gravity="top"
                    android:layout_marginStart="28dp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_margin="10dp"
                android:background="@drawable/savings_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginStart="28dp"
                    android:layout_alignParentStart="true"
                    android:text="@string/savings"
                    android:textAppearance="@style/budget_"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/savings_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/dummy_value"
                    android:textAppearance="@style/budget_value"
                    android:gravity="top"
                    android:layout_marginStart="28dp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_margin="10dp"
                android:background="@drawable/goal_layout"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginStart="28dp"
                    android:layout_alignParentStart="true"
                    android:text="@string/goals"
                    android:textAppearance="@style/budget_"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/goal_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/dummy_value"
                    android:textAppearance="@style/budget_value"
                    android:gravity="top"
                    android:layout_marginStart="28dp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
        <Button
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/floating_button1"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/main_add_sign"
            android:textSize="30sp"
            android:textAppearance="@style/main_plus_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp" />
</RelativeLayout>